@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
class SDL_Renderer

'=======================================================================================================================
package sdl_texture {
    '===================================================================================================================
    class SdlTexture {
        + getRawTexture() -> SDL_Texture&
    }

    '===================================================================================================================
    class SdlTextureSampling {
        + activateFor(SDL_Renderer&)
    }

    '-------------------------------------------------------------------------------------------------------------------
    SdlTextureSampling --> SDL_Renderer

    '===================================================================================================================
    class SdlTexturingObjectsCreator  {
        + createTexture()
        + createTextureSampler()
    }

    '===================================================================================================================
    class SdlTexturingMgr  {
        + getTexturingObjectsCreator()
        + setCurrentTextureSampler(TextureSampler*)
    --
        + setSdlRenderer(SDL_Renderer&)
    }

    '-------------------------------------------------------------------------------------------------------------------
    SdlTexturingMgr *-- SdlTexturingObjectsCreator
    SdlTexturingMgr o-- SdlTextureSampling
    SdlTexturingMgr o-- SDL_Renderer
}

'=======================================================================================================================
@enduml
